# proteus

./: .env.example  .gitignore  .production-wallet-backup.json  .production-wallet-backup.json.password  .replit  .test-wallet.json  .test_wallets.json  API_DOCUMENTATION.md  COINBASE-INTEGRATION-GUIDE.md  CRYPTO-USERS-PLAN.md  CRYPTO_PLAN.md  DEPLOYMENT_CHECKLIST.md  ENGINEERING.md  FIREBASE-SETUP-GUIDE.md  GAP_CLOSING_PLAN.md  LAUNCH.md  METAMASK_SETUP.md  Makefile  ON-CHAIN-CHANGES.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PYTHON_NODE.md  PYTHON_NODE_FILES.md  README.md  SCHEMA_REDESIGN.md  SECONDARY_NODE_README.md  STATUS_WORKFLOW.md  TEST_DATA_GUIDE.md  TEST_RIG_SETUP.md  TEST_WALLET_SETUP.md  TIMEPOINT_PROTEUS_SUITE_INTEGRATION_ANALYSIS.md  WHITEPAPER 2.md  WHITEPAPER.md  app.py  clockchain_node_monolith.py  config.py  config_chain.py  debug_e2e_test.py  deployment-base-sepolia.json  deployment-wallet.txt  (+20 more)
attached_assets/: Pasted--Build-an-App-A-guide-to-building-a-next-js-app-on-Base-using-OnchainKit-export-const-Button--1753795005747_1753795005748.txt  Pasted--Clockchain-MVP-Development-Plan-Work-Completed-Core-Architecture-Component-Status-1752764677039_1752764677040.txt  Pasted--Clockchain-MVP-Overview-Clockchain-MVP-is-a-sophisticated-demonstration-of-a-linguistic-predi-1752764683423_1752764683424.txt  Pasted--Clockchain-s-Revolutionary-Fully-Auditable-Linguistic-Prediction-Platform-represents-a-paradigm--1753114163791_1753114163792.txt  Pasted--Deploy-Smart-Contracts-A-guide-to-help-you-get-started-with-deploying-your-smart-contracts-on-B-1753795068169_1753795068169.txt  Pasted--Skip-to-content-Skip-to-site-index-Get-up-to-200-for-getting-started-Coinbase-Logo-Cryptocurren-1756399714198_1756399714199.txt  Pasted--Welcome-to-the-BASE-Sepolia-Test-Manager-Select-a-test-from-the-left-panel-to-begin-testing-1-0-1753894933089_1753894933090.txt  Pasted--workspace-npx-hardhat-run-scripts-deploy-genesis-testnet-js-network-baseSepolia-dotenv-17-2-1--1755039340299_1755039340300.txt  (+10 more)
contracts/: .env.template  (+2 more)
(+364 files in other folders)
