[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.5.3",
    "cryptography>=45.0.5",
    "email-validator>=2.2.0",
    "flask-limiter>=3.12",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-levenshtein>=0.27.1",
    "pytz>=2025.2",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "web3>=7.12.1",
    "websockets>=15.0.1",
    "werkzeug>=3.1.3",
]
